# mangamanga

./: .gitignore  README.md  _headers  manga.html  package-lock.json  package.json  plan  vite.config.ts
convex/: http.ts  manga.ts  readingProgress.ts  schema.ts  users.ts
convex/_generated/: api.d.ts
public/: _headers  index.html  manga.html
public/manga/: main.js
python-scripts/: .env.example  README.md  pyproject.toml  update_volume_pages.py  upload_full_manga.py  upload_manga_to_db.py  upload_volume.py
scripts/: build-manga.ts  convert-to-webp.ts  generate-jwt-keys.mjs  update-cover-url.ts  upload-to-convex.ts  upload-to-r2.ts  upload-volume.ts
src/: index.ts
src/manga/: MangaDetail.tsx  MangaList.tsx  main.tsx
